--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-@page
+<!--@page
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
-}
+} -->
+
 <div><p><br></p></div>
 
 <div class="parallax" style="background-image: url('../images/slideshow/picture1.jpg');"></div>
