--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <img src="~/images/nationals-article.jpg" class="two-column-images" />
         </div>
         <p class="column-text">
-            San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men’s
-            Division I title on Saturday night, while Texas A claimed the Women’s Division I
+            San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men's
+            Division I title on Saturday night, while Texas A claimed the Women's Division I
             title in St. Louis, Missouri, on the final day of the competition.<br>A total of
             456 teams competed in the three-day event, which is divided into divisions based
             on enrollment... <a href="https://www.teamusa.org/USA-Volleyball/Features/2018/April/14/San-Diego-State-Texas-Win-Top-NCVF-Crowns">Read More</a>
