fixed some spacing

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="column-text">
             San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men's
             Division I title on Saturday night, while Texas A claimed the Women's Division I
-            title in St. Louis, Missouri, on the final day of the competition.<br>A total of
+            title in St. Louis, Missouri, on the final day of the competition. A total of
             456 teams competed in the three-day event, which is divided into divisions based
             on enrollment... <a href="https://www.teamusa.org/USA-Volleyball/Features/2018/April/14/San-Diego-State-Texas-Win-Top-NCVF-Crowns">Read More</a>
         </p>
@@ -47,7 +47,7 @@
         </div>
         <p class="column-text">
             The UT Tower shined orange on Tuesday, May 8 in celebration of National Championship
-            titles earned by four Sport Cubs.<br>Congratulations to Longhorn Powerlifting, UT
+            titles earned by four Sport Cubs. Congratulations to Longhorn Powerlifting, UT
             Fencing Club, UT Women's Volleyball Club, and Texas TaeKwonDo...
             <a href="https://www.utrecsports.org/news-events/news/tower-shines-for-sport-clubs">Read More</a>
         </p>
