--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Home page";
 } -->
 
+<!DOCTYPE html>
+<link rel="stylesheet" href="styles.css">
+
 <div><p><br></p></div>
 
 <div class="parallax" style="background-image: url('../images/slideshow/picture1.jpg');"></div>
