--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!--@page
-@model IndexModel
-@{
-    ViewData["Title"] = "Home page";
-} -->
 
 <!DOCTYPE html>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="site.css">
 
 <div><p><br></p></div>
 
