attemting to fix pictures

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+
 <link rel="stylesheet" href="site.css">
 
 <div><p><br></p></div>
@@ -28,7 +29,7 @@
     <div class="column-two">
         <div class="center">
             <h3 class="orange">Texas Defeats Texas A&M to Win National Championship</h3>
-            <img src="~/images/nationals-article.jpg" class="two-column-images" />
+            <img src=".../images/nationals-article.jpg" class="two-column-images" />
         </div>
         <p class="column-text">
             San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men's
