attempting to add layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
+
 <!DOCTYPE html>
 
 <html>
-
 <head>
-    <link rel="stylesheet" href="../css/site.css">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 
 <body>
+    <div><p><br></p></div>
+
     <div class="parallax" style="background-image: url('../images/slideshow/picture1.jpg');"></div>
 
     <div class="center">
@@ -34,8 +37,8 @@
                 <img src="~/images/nationals-article.jpg" class="two-column-images" />
             </div>
             <p class="column-text">
-                San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men’s
-                Division I title on Saturday night, while Texas A claimed the Women’s Division I
+                San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men's
+                Division I title on Saturday night, while Texas A claimed the Women's Division I
                 title in St. Louis, Missouri, on the final day of the competition. A total of
                 456 teams competed in the three-day event, which is divided into divisions based
                 on enrollment... <a href="https://www.teamusa.org/USA-Volleyball/Features/2018/April/14/San-Diego-State-Texas-Win-Top-NCVF-Crowns">Read More</a>
